--- a/all-mobs-tracker/index.html
+++ b/all-mobs-tracker/index.html
@@ -1,20 +1,21 @@
-<!doctype html>
-<html lang="it">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Mobs Tracker - Minecraft</title>
-    <style>
-      .pixelated {
-        image-rendering: pixelated;
-        image-rendering: -moz-crisp-edges;
-        image-rendering: crisp-edges;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+  <!doctype html>
+  <html lang="it">
+    <head>
+      <meta charset="UTF-8" />
+      <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+      <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>All Mobs Tracker - Minecraft</title>
+      <style>
+        .pixelated {
+          image-rendering: pixelated;
+          image-rendering: -moz-crisp-edges;
+          image-rendering: crisp-edges;
+        }
+      </style>
+    </head>
+    <body>
+      <div id="root"></div>
+      <script type="module" src="/src/main.jsx"></script>
+    </body>
+  </html>
