--- a/all-mobs-tracker/index.html
+++ b/all-mobs-tracker/index.html
@@ -4,8 +4,9 @@
       <meta charset="UTF-8" />
       <link rel="icon" type="image/svg+xml" href="/vite.svg" />
       <link href="https://fonts.cdnfonts.com/css/minecraft-4" rel="stylesheet">
+      <link rel="icon" href="/public/Favicon.png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>All Mobs Tracker - Minecraft</title>
+      <title>Giro's - All Mobs Variants Tracker</title>
       <style>
         .pixelated {
           image-rendering: pixelated;
